syntax = "proto3";

package reduct.proto.api;

// Stats of entry
message EntryInfo {
  string name = 1;          // name of bucket
  uint64 size = 2;          // size of bucket in bytes
  uint64 record_count = 3;  // number of records
  uint64 oldest_record = 5; // unix timestamp of oldest record in seconds
  uint64 latest_record = 6; // unix timestamp of latest record in seconds
}

// Record
message RecordInfo {
  uint64 ts = 1;      // timestamp of record in microseconds
  uint64 size = 2;    // size in bytes
}

// List of records
message RecordInfoList {
  repeated RecordInfo records = 1;
}